# Game-Structure-Template

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
data/scripts/static/: bindings.lua  initialize.lua  update.lua
glad/include/glad/: glad.h
glad/src/: glad.c
src/: Application.cpp  Application.h  headers.h  main.cpp
src/.Game/: Player.cpp  Player.h  World.cpp  World.h  definitions.h
src/Game/: Barrier.cpp  Barrier.h  Game.cpp  Game.h  Player.cpp  Player.h
src/classes/: Camera.cpp  Camera.h  Entity.cpp  Entity.h  Hitbox.cpp  Hitbox.h  NonEntity.cpp  NonEntity.h  Scene.cpp  Scene.h  SubEntity.cpp  SubEntity.h  Text.h
src/core/: Application.cpp  Application.h  main.cpp
src/sys/: Engine.cpp  Engine.h  Events.cpp  Events.h  Files.cpp  Files.h  Handler.cpp  Handler.h  Logger.cpp  Logger.h  LuaBinder.cpp  LuaBinder.h  Physics.cpp  Physics.h  TextRendering.cpp  TextRendering.h  Timer.cpp  Timer.h  inputdefs.h
src/util/: Animation.cpp  Animation.h  Hitbox.cpp  Hitbox.h  Object.cpp  Object.h  Sprite.cpp  Sprite.h  Window.cpp  Window.h
src/util/gl/: Buffers.cpp  Buffers.h  DefaultShaders.h  Shaders.cpp
src/util/renderer/: Buffers.cpp  Buffers.h  DefaultShaders.h  Shaders.cpp  Shaders.h
